# dredge

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  dredge.desktop  earworm.desktop  justfile
.claude/commands/: ship.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/src/: App.svelte  app.css
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: host.rs  main.rs
crates/engine/: Cargo.toml  build.rs
crates/engine/examples/: play.rs
crates/engine/src/: buffer.rs  capture.rs  capture_cpal.rs  decode.rs  device.rs  encode.rs  engine.rs  engine_state.rs  error.rs  export.rs  ffi.rs  filter.rs  layers.rs  lib.rs  looper.rs  metronome.rs  output.rs  output_cpal.rs  peaks.rs  pipeline.rs  pitch.rs  render_core.rs  ring.rs  stream_clock.rs  stretch.rs
crates/engine/tests/: decode.rs
crates/engine/tests/fixtures/: audio_only.webm
crates/practice/: Cargo.toml
crates/practice/src/: bundle.rs  error.rs  junction.rs  lib.rs  library.rs  model.rs  naming.rs  notes.rs  runner.rs  schedule.rs  sidecar.rs  store.rs  tempo.rs
crates/practice/tests/: store.rs
crates/server/: Cargo.toml
crates/server/src/: analysis.rs  app.rs  capture_control.rs  control.rs  input_monitor.rs  lib.rs  logging.rs  midi.rs  pedal.rs  proc.rs  profile.rs  protocol.rs  recording.rs  routine.rs  sampler.rs  section_click.rs  socket.rs  stems.rs  tuner.rs
crates/server/tests/: app_analysis.rs  app_capture.rs  app_export.rs  app_focus.rs  app_library.rs  app_metronome.rs  app_notes.rs  app_plan_run.rs  app_position.rs  app_profiling.rs  app_quick.rs  app_rating.rs  app_section_click.rs  app_settings.rs  app_stems.rs  app_tuner.rs  dispatch_shared.rs  open_timing.rs  socket.rs
docs/: macos-build.md
docs/research/: recording-latency-compensation.md
docs/superpowers/campaigns/: 2026-06-25-overdub-autosync.md  device-control.md  dock-panels.md  drill-box.md  foot-pedal-control.md  generalized-focus.md  linux-distribution.md  loop-select-resize-delete.md  practice-routines.md  section-header-drag-select.md  settings-as-tab.md  ui-cleanup-pass.md  video-audio-extraction.md  waveform-leftover-loop-indicators.md  waveform-scrollbar-zoom.md
docs/superpowers/mockups/: export-tab.html
docs/superpowers/plans/: 2026-06-12-plan-10-fader-primitive.md  2026-06-12-plan-11-prepare-flow.md  2026-06-12-plan-12-responsiveness-settings.md  2026-06-12-plan-7-ephemeral-practice.md  2026-06-12-plan-8-ui-abstractions.md  2026-06-12-plan-9-auto-analysis.md  2026-06-12-v1-plan-1-practice-core.md  2026-06-12-v1-plan-2-engine.md  2026-06-12-v1-plan-3-server.md  2026-06-12-v1-plan-4-tauri-shell.md  2026-06-12-v2-plan-5-capture.md  2026-06-12-v3-plan-6-stems.md  2026-06-13-library-management.md  2026-06-13-live-progress.md  2026-06-13-live-readout-v2.md  2026-06-13-plan-13-open-speed.md  2026-06-13-plan-14-volume-structure-viz.md  2026-06-13-profiling-backend.md  2026-06-13-profiling-frontend.md  2026-06-13-vram-histogram.md  2026-06-14-guitar-tuner.md  2026-06-14-transient-looping-and-dynamic-naming.md  2026-06-15-performance-campaign.md  2026-06-15-ui-refactor-campaign.md  2026-06-16-export-tab.md  2026-06-16-macos-port.md  2026-06-17-section-notes.md  2026-06-19-portable-song-bundles.md  2026-06-20-bundle-folder-tracks-name.md  2026-06-23-count-in.md  2026-06-24-click-track.md  2026-06-24-metronome.md  2026-06-25-overdub-autosync.md  2026-06-25-overdub-layers.md  2026-06-27-stage-box-management.md  2026-06-27-stage-flow-region.md  2026-06-27-workspace-unification.md  2026-07-15-per-song-isolation-defaults.md  2026-07-17-pedal-control.md
docs/superpowers/specs/: 2026-06-12-dredge-design.md  2026-06-12-earworm-design.md  2026-06-13-library-management-design.md  2026-06-13-live-progress-design.md  2026-06-13-live-readout-v2-design.md  2026-06-13-profiling-design.md  2026-06-13-vram-histogram-design.md  2026-06-14-guitar-tuner-design.md  2026-06-14-transient-looping-and-dynamic-naming-design.md  2026-06-15-working-loop-design.md  2026-06-16-export-tab-design.md  2026-06-17-section-notes-design.md  2026-06-19-portable-song-bundles-design.md  2026-06-20-bundle-folder-tracks-name-design.md  2026-06-23-count-in-design.md  2026-06-23-device-control-design.md  2026-06-24-click-track-design.md  2026-06-24-metronome-design.md  2026-06-25-overdub-autosync-design.md  2026-06-25-overdub-layers-design.md  2026-06-27-stage-box-management-design.md  2026-06-27-stage-flow-region-design.md  2026-06-27-workspace-unification-design.md  2026-07-14-take-waveforms-and-input-meter-design.md  2026-07-15-per-song-isolation-defaults-design.md  2026-07-17-pedal-control-design.md  2026-07-17-stop-analyzing-design.md
mockups/1-readout-header/: REASONING.md  index.html
mockups/2-structure-map/: REASONING.md  index.html
mockups/3-minimal-editorial/: REASONING.md  index.html
mockups/transport/1-pro-bar/: REASONING.md  index.html
mockups/transport/2-modules/: REASONING.md  index.html
packaging/aur/: README.md
packaging/aur/dredge/: .SRCINFO  PKGBUILD
packaging/aur/dredge-bin/: .SRCINFO  PKGBUILD
packaging/aur/dredge-looper-bin/: .SRCINFO  PKGBUILD
packaging/aur/earworm-bin/: .SRCINFO  (+1 more)
scripts/: analyze  analyze_impl.py  check-theme-colors  dredge-doctor  dredge-enable-ml  earworm-doctor  earworm-enable-ml  ship  songformer_impl.py
(+128 files in other folders)
