[workspace]
resolver = "2"
members = ["crates/practice", "crates/engine", "crates/server"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
rusqlite = { version = "0.32", features = ["bundled"] }
