[workspace]
resolver = "2"
members = [
    "crates/practice",
    "crates/engine",
    "crates/server",
    "apps/desktop/src-tauri",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# 0.3.48 has an E0119 regression (conflicting From impls) that breaks tauri-utils/cookie
time = { version = ">=0.3, <0.3.48", features = ["serde", "macros", "formatting", "parsing"] }
rusqlite = { version = "0.32", features = ["bundled"] }
