[workspace]
resolver = "2"
members = [
    "crates/practice",
    "crates/engine",
    "crates/server",
    "apps/desktop/src-tauri",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# 0.3.48 has an E0119 regression (conflicting From impls) that breaks tauri-utils/cookie
time = { version = ">=0.3, <0.3.48", features = ["serde", "macros", "formatting", "parsing"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Optimize dependencies even in dev builds. Unoptimized symphonia / rubato /
# blake3 decode is ~100x slower, which made `just dev` take ~2 min to open a
# song with cached stems (decode of the main file + 4 stem WAVs). Our own
# workspace crates stay at opt-level 0 for fast incremental builds and
# debuggability. First build after this change recompiles deps once, then caches.
[profile.dev.package."*"]
opt-level = 2
