[package]
name = "engine"
version = "0.1.0"
edition.workspace = true

[dependencies]
thiserror.workspace = true
symphonia = { version = "0.5", features = ["mp3", "flac", "vorbis", "wav", "pcm", "isomp4", "aac"] }
rubato = "0.16"
rtrb = "0.3"
arc-swap = "1"
pipewire = { version = "0.10", features = ["v0_3_49"] }
libspa = "0.10"
blake3 = "1"
serde.workspace = true
serde_json.workspace = true
dirs = "6"
hound = "3"

[dev-dependencies]

[build-dependencies]
pkg-config = "0.3"
