[package]
name = "server"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
time.workspace = true
practice = { path = "../practice" }
engine = { path = "../engine" }
dirs = "6"

[dev-dependencies]
tempfile = "3"
hound = "3"
rusqlite.workspace = true
