[package]
name = "earworm-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "earworm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
server = { path = "../../../crates/server" }
practice = { path = "../../../crates/practice" }
engine = { path = "../../../crates/engine" }
dirs = "6"
