[package]
name = "earworm-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Ear-first practice looper: loop sections, slow them down pitch-preserving, and drill passages with a live tempo trainer."

[[bin]]
name = "earworm"
path = "src/main.rs"

[features]
# embed the built frontend; `tauri dev` disables this to use the vite dev server
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
server = { path = "../../../crates/server" }
practice = { path = "../../../crates/practice" }
engine = { path = "../../../crates/engine" }
dirs = "6"
